# HormonaIQ-frontend

./: .gitignore  .mcp.json  DESIGN.md  DESIGN_REDESIGN_PLAN.md  backend.md
.gstack-design-audit-20260504/: DESIGN-AUDIT-REPORT.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/agents/: system-prompt.txt
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  data.py  ora.py  report.py  router.py  user.py
backend/app/core/: config.py  exceptions.py  rate_limit.py  security.py  supabase.py
backend/app/repositories/: base.py  symptom_repository.py  user_repository.py
backend/app/schemas/: core.py  ora.py  report.py  user.py
backend/app/services/: crisis_service.py  guard_service.py  notification_service.py  ora_service.py
backend/app/templates/: drsp_report.html
backend/scripts/: verify_pg_cron.sql  verify_rls.sql
backend/sql/: check_ora_quota.sql
backend/tests/integration/: conftest.py  test_auth.py  test_data.py  test_ora_explain.py  test_quota_check.py  test_report.py
backend/tests/unit/: test_guard_service.py  test_jwt_verification.py  test_report_service.py
design-handoff/: README.md
design-handoff/01-tier1-must-paste/: 01-DESIGN.md  02-product-brief.md  04-ui-components.md
design-handoff/02-brand-team/: 01-brand-team.md  02-visual-design-team.md  04-brand-and-ux.md  (+4 more)
hormona-iq/: .env.example  .env.local.example  .gitignore  DESIGN-ISSUES.md  INTEGRATION_NOTES.md  app.json  eas.json  package-lock.json  package.json
supabase/: config.toml
web/: package-lock.json  package.json
(+221 files in other folders)
